Промежуточный результат 9.00 82/46 успешных теста